# learning-assistant

./: .gitignore  pyproject.toml
pacer/: gui.py  services.py
pacer/config/: consts.py  llm_adapter.py
pacer/llms/: llm_snippets.py
pacer/models/: audio_model.py  code_cell_model.py  file_model.py  project_model.py
pacer/orm/: .pacer.db  base.py  chat_message_orm.py  code_orm.py  file_orm.py  jupyter_cell_orm.py  note_orm.py  project_orm.py
pacer/quiz/: quiz_creater.py
pacer/test/: test_creation.py
pacer/tools/: __init__.py  code_cell.py  interactive_code.py  jupyter_handler.py  mistral_adapter.py  rag.py  streamlit_utils.py
