[project]
name = "learning-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=0.3.19",
    "langchain-chroma>=0.2.2",
    "langchain-core>=0.3.37",
    "langchain-mistralai>=0.2.6",
    "langchain-openai>=0.3.6",
    "numpy>=1.26.4",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.1",
]
